// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button constructor should render alternate button 1`] = `
<div>
  <button
    class="n-button with-label Alternate"
  >
    <span>
      Alternate
    </span>
  </button>
</div>
`;

exports[`Button constructor should render custom css class name 1`] = `
<div>
  <button
    class="n-button with-label custom-class-name Primary"
  >
    <span>
      Primary Custom
    </span>
  </button>
</div>
`;

exports[`Button constructor should render icon round button 1`] = `
<div>
  <button
    class="n-button with-icon IconRound"
  >
    <play-button.svg />
  </button>
</div>
`;

exports[`Button constructor should render primary button 1`] = `
<div>
  <button
    class="n-button with-label Primary"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Button constructor should render primary button with icon 1`] = `
<div>
  <button
    class="n-button with-icon with-label Primary"
  >
    <play-button.svg />
    <span>
      Primary Ic
    </span>
  </button>
</div>
`;

exports[`Button constructor should render secondary button 1`] = `
<div>
  <button
    class="n-button with-label Secondary"
  >
    <span>
      Secondary
    </span>
  </button>
</div>
`;

exports[`Button constructor should render secondary button with icon 1`] = `
<div>
  <button
    class="n-button with-icon with-label Secondary"
  >
    <play-button.svg />
    <span>
      Secondary Ic
    </span>
  </button>
</div>
`;

exports[`Button constructor should render secondary icon round button 1`] = `
<div>
  <button
    class="n-button with-icon IconRoundSecondary"
  >
    <play-button.svg />
  </button>
</div>
`;
